--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,6 +77,7 @@
   <string name="open_in_webview">Web view</string>
   <string name="open_in_default_browser">Default browser</string>
   <string name="open_in_custom_tab">Custom tab</string>
+  <string name="use_app_default">Use app default</string>
   <string name="open_item_by_default_with">Open items by default with</string>
   <string name="open_links_with">Open links with</string>
   <string name="reader_settings">Reader</string>
