--- a/app/src/main/res/values-ca-rES/strings.xml
+++ b/app/src/main/res/values-ca-rES/strings.xml
@@ -83,8 +83,8 @@
     <string name="mark_as_unread">Marca com a no llegit</string>
     <string name="mark_as_read">Marca com a llegit</string>
     <string name="search_feed_empty_hint">Introdueix una adreça de canal</string>
-    <string name="empty_feed_add">&lt;font color=#607D8B&gt;Afegir&lt;/font&gt; més canals\?</string>
-    <string name="empty_feed_open">&lt;font color=#607D8B&gt;Obrir&lt;/font&gt; un altre canal\?</string>
+    <string name="empty_feed_add"><annotation style="link">Afegir</annotation> més canals\?</string>
+    <string name="empty_feed_open"><annotation style="link">Obrir</annotation> un altre canal\?</string>
     <string name="empty_feed_top">Res a llegir aquí. Voldries…</string>
     <string name="save">Desa</string>
     <string name="on_date" comment="1 is the date. Used in the feed view.">%1$s</string>
