--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -10,8 +10,8 @@
     <string name="title">Název</string>
     <string name="save">Uložit</string>
     <string name="empty_feed_top">Nic ke čtení. Chtěli byste…</string>
-    <string name="empty_feed_open"><![CDATA[<font color="#607D8B">Otevřít</font> jiný zdroj?]]></string>
-    <string name="empty_feed_add"><![CDATA[<font color="#607D8B">Přidat</font> více zdrojů?]]></string>
+    <string name="empty_feed_open"><annotation style="link">Otevřít</annotation> jiný zdroj?</string>
+    <string name="empty_feed_add"><annotation style="link">Přidat</annotation> více zdrojů?</string>
     <string name="search_feed_empty_hint">Zadat adresu zdroje</string>
     <string name="mark_as_read">Označit jako přečtené</string>
     <string name="mark_as_unread">Označit jako nepřečtené</string>
