--- a/app/src/main/res/values-eo/strings.xml
+++ b/app/src/main/res/values-eo/strings.xml
@@ -46,8 +46,8 @@
     <string name="mark_as_read">Marki kiel legitan</string>
     <string name="search_feed_empty_hint">Tajpu adreson de fluo</string>
     <string name="empty_feed_top">Neniu legaĵo ĉi tie. Ĉu vi volas…</string>
-    <string name="empty_feed_add">&lt;font color=#607D8B&gt;Aldoni&lt;/font&gt; pli da fluoj\?</string>
-    <string name="empty_feed_open">&lt;font color=#607D8B&gt;Malfermi&lt;/font&gt; alian fluon\?</string>
+    <string name="empty_feed_add"><annotation style="link">Aldoni</annotation> pli da fluoj\?</string>
+    <string name="empty_feed_open"><annotation style="link">Malfermi</annotation> alian fluon\?</string>
     <string name="save">Konservi</string>
     <string name="title">Titolo</string>
     <string name="add_feed_search_hint">URL de fluo</string>
