--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -13,8 +13,8 @@
     <string name="on_date" comment="1 is the date. Used in the feed view.">%1$s</string>
     <string name="save">Simpan</string>
     <string name="empty_feed_top">Belum ada feed. Apakah Anda ingin…</string>
-    <string name="empty_feed_open"><![CDATA[<font color="#607D8B">Membuka</font> feed lain?]]></string>
-    <string name="empty_feed_add"><![CDATA[<font color="#607D8B">Menambahkan</font> feed lagi?]]></string>
+    <string name="empty_feed_open"><annotation style="link">Membuka</annotation> feed lain?</string>
+    <string name="empty_feed_add"><annotation style="link">Menambahkan</annotation> feed lagi?</string>
     <string name="search_feed_empty_hint">Masukkan alamat feed</string>
     <string name="mark_as_read">Tandai sudah dibaca</string>
     <string name="mark_as_unread">Tandai belum dibaca</string>
