--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -11,8 +11,8 @@
     <string name="by_author_on_date" comment="1 is the author, 2 is the date. So the default format will be shown as&#10;&#10;John Smith, Saturday, 9 January 2021 15:49&#10;&#10;if better for other language, it can be changed. For example &#10;&#10;%1$s on %2$s:&#10;&#10;John Smith on Saturday, 9 January 2021 15:49">da %1$s, %2$s</string>
     <string name="save">Salva</string>
     <string name="empty_feed_top">Nulla da leggere. Vorresti…</string>
-    <string name="empty_feed_open">&lt;font color=#607D8B&gt;Aprire&lt;/font&gt; un altro flusso\?</string>
-    <string name="empty_feed_add">&lt;font color=#607D8B&gt;Aggiungere&lt;/font&gt; altri flusso\?</string>
+    <string name="empty_feed_open"><annotation style="link">Aprire</annotation> un altro flusso\?</string>
+    <string name="empty_feed_add"><annotation style="link">Aggiungere</annotation> altri flusso\?</string>
     <string name="search_feed_empty_hint">Inserisci l\'indirizzo del flusso</string>
     <string name="mark_as_read">Segna come letto</string>
     <string name="mark_as_unread">Segna come non letto</string>
