--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -11,8 +11,8 @@
     <string name="by_author_on_date" comment="1 is the author, 2 is the date. So the default format will be shown as&#10;&#10;John Smith, Saturday, 9 January 2021 15:49&#10;&#10;if better for other language, it can be changed. For example &#10;&#10;%1$s on %2$s:&#10;&#10;John Smith on Saturday, 9 January 2021 15:49">作者 %1$s, %2$s</string>
     <string name="save">保存</string>
     <string name="empty_feed_top">ここに読むものはありません。 したいことは…</string>
-    <string name="empty_feed_open">別のフィードを&lt;font color=#607D8B&gt;開く&lt;/font&gt;\?</string>
-    <string name="empty_feed_add">フィードを&lt;font color=#607D8B&gt;追加&lt;/font&gt;\?</string>
+    <string name="empty_feed_open">別のフィードを<annotation style="link">開く</annotation>\?</string>
+    <string name="empty_feed_add">フィードを<annotation style="link">追加</annotation>\?</string>
     <string name="search_feed_empty_hint">フィードのアドレスを入力</string>
     <string name="mark_all_as_read">すべて既読にする</string>
     <string name="edit_feed">フィードを編集</string>
