--- a/app/src/main/res/values-no/strings.xml
+++ b/app/src/main/res/values-no/strings.xml
@@ -75,8 +75,8 @@
     <string name="mark_as_unread">Marker som ulest</string>
     <string name="mark_as_read">Marker som lest</string>
     <string name="search_feed_empty_hint">Skriv inn adressen til en informasjonskanal</string>
-    <string name="empty_feed_add">&lt;font color=#607D8B&gt;Add&lt;/font&gt; flere informasjonskanaler\?</string>
-    <string name="empty_feed_open">&lt;font color=#607D8B&gt;Open&lt;/font&gt; en annen informasjonskanal\?</string>
+    <string name="empty_feed_add"><annotation style="link">Add</annotation> flere informasjonskanaler\?</string>
+    <string name="empty_feed_open"><annotation style="link">Open</annotation> en annen informasjonskanal\?</string>
     <string name="empty_feed_top">Ingenting å lese her. Ønsker du å…</string>
     <string name="save">Lagre</string>
     <string name="by_author_on_date" comment="1 is the author, 2 is the date. So the default format will be shown as&#10;&#10;John Smith, Saturday, 9 January 2021 15:49&#10;&#10;if better for other language, it can be changed. For example &#10;&#10;%1$s on %2$s:&#10;&#10;John Smith on Saturday, 9 January 2021 15:49">av %1$s, %2$s</string>
