--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -11,8 +11,8 @@
     <string name="by_author_on_date" comment="1 is the author, 2 is the date. So the default format will be shown as&#10;&#10;John Smith, Saturday, 9 January 2021 15:49&#10;&#10;if better for other language, it can be changed. For example &#10;&#10;%1$s on %2$s:&#10;&#10;John Smith on Saturday, 9 January 2021 15:49">автор: %1$s, %2$s</string>
     <string name="save">Сохранить</string>
     <string name="empty_feed_top">Здесь нечего читать. Хотите…</string>
-    <string name="empty_feed_open"><![CDATA[<font color="#607D8B">Открыть</font> другую ленту?]]></string>
-    <string name="empty_feed_add"><![CDATA[<font color="#607D8B">Добавить</font> ещё ленту?]]></string>
+    <string name="empty_feed_open"><annotation style="link">Открыть</annotation> другую ленту?</string>
+    <string name="empty_feed_add"><annotation style="link">Добавить</annotation> ещё ленту?</string>
     <string name="search_feed_empty_hint">Введите адрес ленты</string>
     <string name="mark_as_read">Отметить как прочитанное</string>
     <string name="mark_as_unread">Отметить как непрочитанное</string>
