--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -93,8 +93,8 @@
     <string name="mark_as_unread">Đánh dấu chưa đọc</string>
     <string name="mark_as_read">Đánh dấu đã đọc</string>
     <string name="search_feed_empty_hint">Nhập địa chỉ của feed</string>
-    <string name="empty_feed_add">&lt;font color=#607D8B&gt;Thêm&lt;/font&gt; feed khác\?</string>
-    <string name="empty_feed_open">&lt;font color=#607D8B&gt;Mở&lt;/font&gt; một feed khác\?</string>
+    <string name="empty_feed_add"><annotation style="link">Thêm</annotation> feed khác\?</string>
+    <string name="empty_feed_open"><annotation style="link">Mở</annotation> một feed khác\?</string>
     <string name="empty_feed_top">Không có gì để đọc ở đây. Bạn có muốn…</string>
     <string name="save">Lưu</string>
     <string name="on_date" comment="1 is the date. Used in the feed view.">%1$s</string>
