--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -13,8 +13,8 @@
     <string name="on_date" comment="1 is the date. Used in the feed view.">%1$s</string>
     <string name="save">保存</string>
     <string name="empty_feed_top">没有可阅读的内容。您是否想要…</string>
-    <string name="empty_feed_open"><![CDATA[<font color="#607D8B">打开</font>另一个订阅？]]></string>
-    <string name="empty_feed_add"><![CDATA[<font color="#607D8B">添加</font>更多订阅？]]></string>
+    <string name="empty_feed_open"><annotation style="link">打开</annotation>另一个订阅？</string>
+    <string name="empty_feed_add"><annotation style="link">添加</annotation>更多订阅？</string>
     <string name="search_feed_empty_hint">输入一个订阅地址</string>
     <string name="mark_as_read">标记为已读</string>
     <string name="mark_as_unread">标记为未读</string>
