Updated Chinese (Traditional) translation using Weblate
Currently translated at 2.4% (3 of 125 strings)

Translation: Feeder/Android strings
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/zh_Hant/

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="action_settings">設置</string>
+    <string name="navigation_drawer_close">關閉導航菜單</string>
+    <string name="navigation_drawer_open">打開導航菜單</string>
 </resources>
