--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -81,6 +81,9 @@
     <string name="theme_day">Dag</string>
     <string name="theme_night">Natt</string>
     <string name="theme">Tema</string>
+    <string name="dark_theme_preference">Valt natt-\tema</string>
+    <string name="dark_theme_preference_black">Svart</string>
+    <string name="dark_theme_preference_dark">Mörk</string>
     <string name="sort_newest_first">Senaste först</string>
     <string name="sort_oldest_first">Äldst först</string>
     <string name="sort">Ordna efter</string>
