Added a new feed option to fix feeds with bad ids
Fixes #434

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -142,4 +142,5 @@
   <string name="feed_item_style_card">Card</string>
   <string name="feed_item_style_compact">Compact</string>
   <string name="feed_item_style_super_compact">Super compact</string>
+    <string name="generate_extra_unique_ids">Generate extra unique IDs</string>
 </resources>
