--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -142,5 +142,6 @@
   <string name="feed_item_style_card">Card</string>
   <string name="feed_item_style_compact">Compact</string>
   <string name="feed_item_style_super_compact">Super compact</string>
-    <string name="generate_extra_unique_ids">Generate extra unique IDs</string>
+  <string name="generate_extra_unique_ids">Generate extra unique IDs</string>
+  <string name="only_enable_for_bad_id_feeds">Only enable for feeds with bad IDs</string>
 </resources>
