--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -171,4 +171,8 @@
   <string name="sync_code">Sync code</string>
   <string name="secret_key">Secret key</string>
   <string name="join_sync_chain">Join sync chain</string>
+  <string name="disabled">Disabled</string>
+  <string name="only_from_end">Only from end</string>
+  <string name="from_anywhere">From anywhere</string>
+  <string name="swipe_to_mark_as_read">Swipe to mark as read</string>
 </resources>
