--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -176,4 +176,5 @@
   <string name="from_anywhere">From anywhere</string>
   <string name="swipe_to_mark_as_read">Swipe to mark as read</string>
   <string name="are_you_sure_leave_sync_chain">Are you sure you want to leave the sync chain?</string>
+  <string name="no_barcode_scanner_installed">Could not find a barcode scanner</string>
 </resources>
