--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,6 +70,8 @@
   <string name="no_activity_for_link">Install something to open this link with first</string>
   <string name="check_for_updates">Look for new articles…</string>
   <string name="on_startup">Upon app start</string>
+  <string name="block_list">Block list</string>
+  <string name="add_item">Add item</string>
   <string name="show_fab">Show floating action button</string>
   <string name="include_mobile_hotspots">Include mobile hotspots</string>
   <string name="updated_feeds">Updated feeds</string>
@@ -156,6 +158,7 @@
   <string name="this_device">%1$s (this device)</string>
   <string name="disconnect_device_from_sync">Disconnect device from sync chain</string>
   <string name="devices_on_sync_chain">Devices on sync chain</string>
+  <string name="remove">Remove</string>
   <string name="remove_device">Remove device</string>
   <string name="remove_device_question">Are you sure you want to delete device %1$s?</string>
   <string name="press_scan_sync">On your device, navigate to device sync, and press scan sync code.</string>
